Adding Code Comment

--- a/config.conf
+++ b/config.conf
@@ -4,7 +4,7 @@ port=12340
 feed_host=192.168.0.22
 feed_port=12341
 
-;nice settings
+;1on1 settings
 ;host=127.0.0.1
 ;port=12340
 ;feed_host=127.0.0.1
